@@ -185,3 +185,7 @@ Al guardar la config, la que no existe no debería guardarse (ya no deberá esta
 -changelog llega al maximo que puede mostrar el visor en menu cuando hay update (64000 bytes)
 
 -the next war: revisar border deberia desactivar. musica en menu no se oye bien
+
+
+-tbblue: rotaciones de sprites (tanto 8bpp como 4bpp). Ver test SprBig4b.sna , SpritBig.sna. 
+-tbblue: otras issues con sprites, ver SpritRel.sna.
